# quickform

./: Cargo.toml  LICENSE  README.md
codegen/: Cargo.toml
codegen/src/: context.rs  lib.rs
docs/: design.md  gen.md  technical.md
outputs/express-01/: README.md  package.json  tsconfig.json
outputs/express-01/src/: app.ts  server.ts
outputs/express-01/src/config/: config.ts
outputs/express-01/src/controllers/: paymentController.ts  userController.ts
outputs/express-01/src/middleware/: authMiddleware.ts
outputs/express-01/src/models/: userModel.ts
outputs/express-01/src/routes/: paymentRoute.ts  userRoutes.ts
outputs/express-01/src/types/: express.d.ts
outputs/express-01/src/utils/: errorHandler.ts
quickform/: Cargo.toml
quickform/src/: context.rs  error.rs  fs.rs  lib.rs  loader.rs  operation.rs  state.rs  template.rs
quickform/src/fs/: mod.rs
quickform/src/generator/: mod.rs  node.rs  template.rs
templates/express/: .gitignore  package.json.jinja
templates/express/src/: app.ts.jinja
templates/express/src/config/: config.ts.jinja
templates/express/src/controllers/: controller.ts.jinja
templates/express/src/middleware/: middleware.ts.jinja
templates/express/src/models/: model.ts.jinja  modelv2.ts.jinja  modelv3.ts.jinja
templates/express/src/routes/: route.ts.jinja
tests/: Cargo.toml
tests/src/: main.rs
tests/src/prompts/: entities.rs  mod.rs  start.rs
tests/src/schemas/: context.rs  entity.rs  mod.rs
utils/: Cargo.toml
utils/src/: fs.rs  lib.rs  template.rs
utils/src/fs/: mod.rs
(+1 files in other folders)
