[package]
name = "quickform"
version = "0.1.0"
edition = "2021"
description = "A flexible templating and operation execution framework for Rust"
license = "MIT"
homepage = "https://github.com/santiagomed/quickform"
repository = "https://github.com/santiagomed/quickform"
readme = "../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
minijinja = { version = "2.5.0", features = ["loader"] }

[dev-dependencies]
tempdir = "0.3.7"
